Support double line breaks in SanitizedTextSpans. Fix #173

--- a/app/styles/additional.css
+++ b/app/styles/additional.css
@@ -11,4 +11,5 @@ p {
 /* This is for <blockquotes> inside .HandNoteBlock */
 .HandNoteBlock blockquote {
   margin-left: 2rem;
+  margin-bottom: 1rem;
 }
